# clacky-ai-paas-dsagent/internal/server/http.go
@@ -4,6 +4,7 @@ import (
 	v1 "dsagent/api/helloworld/v1"
 	healthv1 "dsagent/api/health/v1"
 	imagev1 "dsagent/api/image/v1"
+	ecrv1 "dsagent/api/ecr/v1"
 	"dsagent/internal/conf"
 	"dsagent/internal/service"
 
@@ -13,7 +14,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, health *service.HealthService, imageService *service.ImageServiceV2, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, health *service.HealthService, imageService *service.ImageServiceV2, ecrService *service.ECRService, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -32,5 +33,6 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, health *serv
 	v1.RegisterGreeterHTTPServer(srv, greeter)
 	healthv1.RegisterHealthHTTPServer(srv, health)
 	imagev1.RegisterImageServiceHTTPServer(srv, imageService)
+	ecrv1.RegisterECRServiceHTTPServer(srv, ecrService)
 	return srv
 }
